--- a/flashtensors/supervisord.conf
+++ b/flashtensors/supervisord.conf
@@ -19,7 +19,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/flashtensors_supervisor.sock
 
 [program:flashtensors_storage_server]
-command=python -m flashtensors.storage_server --host %(ENV_TEILENGINE_HOST)s --port %(ENV_TEILENGINE_PORT)s --storage-path "%(ENV_TEILENGINE_STORAGE_PATH)s" --num-thread %(ENV_TEILENGINE_NUM_THREADS)s --chunk-size %(ENV_TEILENGINE_CHUNK_SIZE)s --mem-pool-size %(ENV_TEILENGINE_MEM_POOL_SIZE)s
+command=python -m flashtensors.storage_server --host %(ENV_FLASHENGINE_HOST)s --port %(ENV_FLASHENGINE_PORT)s --storage-path "%(ENV_FLASHENGINE_STORAGE_PATH)s" --num-thread %(ENV_FLASHENGINE_NUM_THREADS)s --chunk-size %(ENV_FLASHENGINE_CHUNK_SIZE)s --mem-pool-size %(ENV_FLASHENGINE_MEM_POOL_SIZE)s
 directory=%(here)s/..
 environment=PYTHONPATH="%(here)s/.."
 autostart=false
