Made it clear in the readme that performance benchmarks come from SLLM loading Added a Notice.md file that has the pointer to ServerlessLLM repo. Improved CREDITS.md file. Added additional headers to derived files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Derived from https://github.com/ServerlessLLM/ServerlessLLM/blob/main/sllm_store/CMakeLists.txt
 cmake_minimum_required(VERSION 3.20)
 
 # Set the project name
